--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <title>spx client</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
+    <textarea id="textarea" rows="8" cols="64"></textarea>
     <div id="output"></div>
     <input type="button" value="Activate Sound" id="read" /><br />
     <p id="cpu"></p>
@@ -18,6 +20,7 @@
         const cpu = document.getElementById('cpu')
         const shutdown = document.getElementById('shutdown')
         const restart = document.getElementById('restart')
+        const textarea = document.getElementById('textarea')
         const webSocket = new WebSocket('ws://%replace_as_ws_url%')
 
         read.onclick = () => {
@@ -39,16 +42,16 @@
 
         webSocket.onmessage = event => {
             const json = JSON.parse(event.data)
-            let addition = ''
+            let append = ''
             switch (json.type) {
                 case 'article':
-                    addition = `New article detected: <a href="${json.value.identity}">${json.value.readable}</a>`
+                    append = `New article detected: <a href="${json.value.identity}">${json.value.readable}</a>`
                     break
                 case 'question':
-                    addition = `New question detected: <a href="${json.value.identity}">${json.value.readable}</a>`
+                    append = `New question detected: <a href="${json.value.identity}">${json.value.readable}</a>`
                     break
                 case 'version':
-                    addition = `New version detected: ${json.value.identity}`
+                    append = `New version detected: ${json.value.identity}`
                     break
                 case 'cpu':
                     cpu.innerHTML = json.value.readable
@@ -58,12 +61,19 @@
                     read.disabled = true
                     return
                 default:
-                    alert(`Unknown server request: ${event.data}.`)
+                    alert(`Unknown server notification: ${event.data}.`)
                     break
             }
             const speech = `New ${json.type} detected: ${json.value.readable}`
             speechSynthesis.speak(new SpeechSynthesisUtterance(speech))
-            output.innerHTML = `${addition}<br />${output.innerHTML}`
+            if (json.value.addition) {
+                if (typeof json.value.addition === 'string') {
+                    textarea.value = json.value.addition
+                } else {
+                    textarea.value = json.value.addition.beginning + textarea.value + json.value.addition.ending
+                }
+            }
+            output.innerHTML = `${append}<br />${output.innerHTML}`
             read.disabled = false
         };
     </script>
