--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
         const shutdown = document.getElementById('shutdown')
         const restart = document.getElementById('restart')
         const textarea = document.getElementById('textarea')
-        const webSocket = new WebSocket('ws://%replace_as_ws_url%')
-
-        let heartBeat = 300
+        const wsURL = 'ws://%replace_as_ws_url%'
+        const webSocket = new WebSocket(wsURL)
 
         read.onclick = () => {
             if (read.value !== 'Mark As Read') {
@@ -63,7 +62,6 @@
                     append = `New version detected: ${json.value.identity}`
                     break
                 case 'cpu':
-                heartBeat = 300
                     cpu.innerHTML = json.value.readable
                     return
                 case 'read':
@@ -87,12 +85,13 @@
             read.disabled = false
         }
 
-        setInterval(() => {
-            heartBeat -= 1
-            if (heartBeat < 0) {
-                cpu.innerHTML = 'DISCONNECTED'
-            }
-        }, 10);
+        webSocket.onerror = e => {
+            console.error(e)
+        }
+
+        webSocket.onclose = () => {
+            cpu.innerHTML = 'Server Closed'
+        }
     </script>
 </body>
 
