--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
 </head>
 
 <body>
-    <textarea id="textarea" rows="24" cols="100"></textarea>
+    <input type="button" value="Activate Sound" id="read" />
     <div id="output"></div>
-    <input type="button" value="Activate Sound" id="read" /><br />
     <p id="cpu"></p>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
     <script type="text/javascript">
         "use strict"
         const read = document.getElementById('read')
         const output = document.getElementById('output')
         const cpu = document.getElementById('cpu')
-        const textarea = document.getElementById('textarea')
         const wsURL = 'ws://%replace_as_ws_url%'
         const webSocket = new WebSocket(wsURL)
+
+        const clipboardJS = new ClipboardJS('.copy');
 
         read.onclick = () => {
             if (read.value !== 'Mark As Read') {
                 read.value = 'Mark As Read'
-                if (output.innerHTML === '' && textarea.value === '') {
+                if (output.innerHTML === '') {
                     read.disabled = true
                 }
             } else {
                 output.innerHTML = ''
-                textarea.value = ''
                 read.disabled = true
                 webSocket.send('read')
             }
@@ -39,13 +39,13 @@
             let append = ''
             switch (json.type) {
                 case 'article':
-                    append = `New article detected: <a href="${json.value.identity}">${json.value.readable}</a>`
+                    append = `ARTICLE - <a href="${json.value.identity}">${json.value.readable}</a>`
                     break
                 case 'question':
-                    append = `New question detected: <a href="${json.value.identity}">${json.value.readable}</a>`
+                    append = `QUESTION - <a href="${json.value.identity}">${json.value.readable}</a>`
                     break
                 case 'version':
-                    append = `New version detected: ${json.value.identity}`
+                    append = `VERSION - ${json.value.identity}`
                     break
                 case 'cpu':
                     cpu.innerHTML = json.value.readable
@@ -61,7 +61,7 @@
             const speech = `New ${json.type} detected: ${json.value.readable}`
             speechSynthesis.speak(new SpeechSynthesisUtterance(speech))
             if (json.value.addition) {
-                textarea.value = json.value.addition
+                append += `<button class="copy" data-clipboard-text="${json.value.addition}">Copy BBCode</button>`
             }
             output.innerHTML = `${append}<br />${output.innerHTML}`
             read.disabled = false
