--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             const speech = `New ${json.type} detected: ${json.value.readable}`
             speechSynthesis.speak(new SpeechSynthesisUtterance(speech))
             if (json.value.addition) {
-                append += `<button class="copy" data-clipboard-text="${json.value.addition}">Copy BBCode</button>`
+                append += `<button class="copy" data-clipboard-text="${json.value.addition.replace(/\\/g, '\\\\').replace(/"/g, '\\"')}">Copy BBCode</button>`
             }
             output.innerHTML = `${append}<br />${output.innerHTML}`
             read.disabled = false
