--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
 <head>
     <title>spx client</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        #root {
+            text-align: center;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            transition: 0.3s;
+            padding: 2px 16px;
+            font-size: 20px;
+        }
+
+        #root:hover {
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 
 <body>
-    <input type="button" value="Activate Sound" id="read" />
-    <div id="output"></div>
-    <p id="cpu">Connecting...</p>
+    <div id="root">
+        <input type="button" value="Activate Sound" id="read" />
+        <div id="output"></div>
+        <p id="cpu">Connecting...</p>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
     <script type="text/javascript">
         "use strict"
