--- a/index.html
+++ b/index.html
@@ -7,19 +7,32 @@
 </head>
 
 <body>
-    <input type="button" value="Activate Sound" id="read" />
+    <input type="text" placeholder="Article URI" id="url" />
+    <input type="button" value="Request" id="request" />
     <div id="output"></div>
     <p id="cpu">Connecting...</p>
+    <input type="button" value="Activate Sound" id="read" /><br />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
     <script type="text/javascript">
         "use strict"
         const read = document.getElementById('read')
+        const request = document.getElementById('request')
         const output = document.getElementById('output')
+        const url = document.getElementById('url')
         const cpu = document.getElementById('cpu')
         const wsURL = 'ws://%replace_as_ws_url%'
         const webSocket = new WebSocket(wsURL)
 
         const clipboardJS = new ClipboardJS('.copy');
+
+        request.onclick = () => {
+            if (url.value) {
+                webSocket.send(`requst, ${url.value}`)
+                url.value = ''
+            } else {
+                alert('Please input URI')
+            }
+        }
 
         read.onclick = () => {
             if (read.value !== 'Mark As Read') {
@@ -53,6 +66,9 @@
                     break
                 case 'cpu':
                     cpu.innerHTML = json.value.readable
+                    return
+                case 'response':
+                    append = `Server Response - ${json.value.readable}`
                     return
                 case 'read':
                     output.innerHTML = ""
