:sparkles: Support wss

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         const url = document.getElementById('url')
         const status = document.getElementById('status')
         const verified = document.getElementById('verified')
-        const wsURL = 'ws://%replace_as_ws_url%'
+        const wsURL = 'wss://%replace_as_ws_url%'
         const webSocket = new WebSocket(wsURL)
 
         const clipboardJS = new ClipboardJS('.copy');
