:lipstick: Change tips

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     read.disabled = true
                     return
                 case 'verify':
-                    verified.innerHTML = 'You are my master.'
+                    verified.innerHTML = 'Hi, SPGoding!'
                     verified.style = 'color: green;'
                     return
                 default:
