:lipstick: Change UI

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div id="root">
-        <input type="text" placeholder="Article URL" id="url" /><br />
+        <input type="text" placeholder="Article URL" id="url" style="width: 512px; max-width: 100%;" /><br />
         <input type="text" placeholder="Translator" id="translator" /><br />
         <input type="button" value="Request" id="request" />
         <div id="output"></div>
