--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>spx client</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"">
     <style>
         #root {
             text-align: center;
