:sparkles: New annotation format.
Thanks to Shinatobe.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     return
                 case 'verify':
                     isVerified = true
-                    verifiedStatus.innerHTML = 'Hi, SPGlove / Ricoding!'
+                    verifiedStatus.innerHTML = `Hi, ${translator.value}!`
                     verifiedStatus.style = 'color: green;'
                     return
                 default:
