--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="output"></div>
         <p id="status">Connecting...</p>
         <p id="verifiedStatus" style="color:darkgray">You are using a trial account.</p>
-        <p style="color:rgb(255, 0, 140)">by <a href="https://github.net/@SPGoding">@SPGoding</a></p>
+        <p style="color:rgb(255, 0, 140)">by <a href="https://github.com/SPGoding">@SPGoding</a></p>
         <input type="button" value="Clear" id="read" disabled /><br />
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
