--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <input type="button" value="Clear" id="read" disabled /><br />
     </div>
     <p style="color:rgb(0, 119, 170);margin:auto;padding:1em">SPX by <a href="https://github.com/SPGoding" style="color:rgb(0, 119, 170)">SPGoding</a><br>
-    name translation API by <a href="https://www.bimuyu.com/name-translator/" style="color:rgb(0, 119, 170)">比目鱼</a></p>
+    name translation API by <a href="https://www.bimuyu.com/name-translator/" style="color:rgb(0, 119, 170)">比目鱼</a><br>
+    <a href="https://github.com/SPGoding/spx/blob/master/PRIVACY_POLICY.md" style="color:rgb(0, 119, 170)">Privacy Policy</a></p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js"></script>
     <script type="text/javascript">
         "use strict"
