:lipstick: Update UI

--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
 </head>
 
 <body>
-    <div id="root">
-        <input type="text" placeholder="Article URL" id="url" style="width: 512px; max-width: 100%;" /><br />
-        <input type="text" placeholder="Translator" id="translator" /><br />
-        <input type="button" value="Request" id="request" />
-        <div id="output"></div>
-        <p id="status">Connecting...</p>
-        <p id="verifiedStatus" style="color:darkgray">You are using a trial account.</p>
-        <input type="button" value="Clear" id="read" disabled /><br />
+    <div id=" root">
+    <input type="text" placeholder="Article URL" id="url" style="width: 512px; max-width: 100%;" /><br />
+    <input type="text" placeholder="Translator" id="translator" /><br />
+    <input type="button" value="Request" id="request" />
+    <div id="output"></div>
+    <p id="status">Connecting...</p>
+    <p id="verifiedStatus" style="color:darkgray">You are using a trial account.</p>
+    <input type="button" value="Clear" id="read" disabled /><br />
     </div>
-    <p style="color:rgb(0, 119, 170);margin:auto;padding:1em">SPX by <a href="https://github.com/SPGoding" style="color:rgb(0, 119, 170)">SPGoding</a><br>
-    name translation API by <a href="https://www.bimuyu.com/name-translator/" style="color:rgb(0, 119, 170)">比目鱼</a><br>
-    <a href="https://github.com/SPGoding/spx/blob/master/PRIVACY_POLICY.md" style="color:rgb(0, 119, 170)">Privacy Policy</a></p>
+    <p style="color:rgb(0, 119, 170);margin:auto;padding:1em"><a href="https://github.com/SPGoding/spx/blob/master/README.md"
+            style="color:rgb(0, 119, 170)">About Us</a>
+        <a href="https://github.com/SPGoding/spx/blob/master/PRIVACY_POLICY.md" style="color:rgb(0, 119, 170)">Privacy
+            Policy</a></p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js"></script>
     <script type="text/javascript">
         "use strict"
@@ -144,6 +145,6 @@
             url.disabled = true
         }
     </script>
-</body>
+    </body>
 
 </html>
