--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>spx client</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8"">
+    <meta charset="UTF-8">
     <style>
         #root {
             text-align: center;
@@ -21,6 +21,45 @@
         a {
             color: rgb(0, 119, 170);
         }
+
+        button {
+            margin: 0.3em;
+        }
+
+        #articles {
+            margin: 1em auto;
+            font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+            font-size: 0.8em;
+            border-collapse: collapse;
+            table-layout: fixed;
+            max-width: 80%;
+            max-height: 10em;
+            overflow: scroll;
+        }
+
+        #articles td,
+        #articles th {
+            border: 1px solid #ddd;
+        }
+
+        #articles tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        #articles tr:hover {
+            background-color: #ddd;
+        }
+
+        #articles th:hover {
+            background-color: #bbb;
+        }
+
+        #articles th {
+            padding-top: 0.8em;
+            padding-bottom: 0.8em;
+            background-color: #b2b2b2;
+            color: black;
+        }
     </style>
 </head>
 
@@ -32,10 +71,23 @@
         <div id="output"></div>
         <p id="status">Connecting...</p>
         <p id="verifiedStatus" style="color:darkgray">You are using a trial account.</p>
-        <input type="button" value="Clear" id="read" disabled /><br />
+        <input type="button" value="Clear" id="read" disabled />
+        <p>
+            <div id="categoryCheckboxes"></div>
+            <div>
+                <input type="checkbox" onchange="updateArticlesView();" id="showTranslatedArticle" checked>Translated
+                <input type="checkbox" onchange="updateArticlesView();" id="showUntranslatedArticle"
+                    checked>Untranslated
+            </div>
+            <div>
+                <input type="checkbox" onchange="updateArticlesView();" id="showEmeraldedArticle">Emeralded
+                <input type="checkbox" onchange="updateArticlesView();" id="showUnemeraldedArticle" checked>Unemeralded
+            </div>
+        </p>
+        <table id="articles"></table>
     </div>
-    <p style="text-align: center;"><a href="https://github.com/SPGoding/spx/blob/master/README.md">ABOUT US</a> & 
-    <a href="https://github.com/SPGoding/spx/blob/master/PRIVACY_POLICY.md">PRIVACY POLICY</a></p>
+    <p style="text-align: center;"><a href="https://github.com/SPGoding/spx/blob/master/README.md">ABOUT US</a> &
+        <a href="https://github.com/SPGoding/spx/blob/master/PRIVACY_POLICY.md">PRIVACY POLICY</a></p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js"></script>
     <script type="text/javascript">
         "use strict"
@@ -46,10 +98,18 @@
         const translator = document.getElementById('translator')
         const status = document.getElementById('status')
         const verifiedStatus = document.getElementById('verifiedStatus')
+        const articlesTable = document.getElementById('articles')
+        const categoryCheckboxes = document.getElementById('categoryCheckboxes')
+        const showTranslatedArticle = document.getElementById('showTranslatedArticle')
+        const showUntranslatedArticle = document.getElementById('showUntranslatedArticle')
+        const showEmeraldedArticle = document.getElementById('showEmeraldedArticle')
+        const showUnemeraldedArticle = document.getElementById('showUnemeraldedArticle')
         const wsURL = 'wss://%replace_as_ws_url%'
         const webSocket = new WebSocket(wsURL)
-        let playSound = false
         let isVerified = false
+
+        const categories = []
+        let articles = []
 
         const clipboardJS = new ClipboardJS('.copy')
 
@@ -88,7 +148,6 @@
         read.onclick = () => {
             output.innerHTML = ''
             read.disabled = true
-            playSound = true
         }
 
         webSocket.onopen = () => {
@@ -98,9 +157,11 @@
         webSocket.onmessage = event => {
             const json = JSON.parse(event.data)
             let append = ''
+            let playSound = false
             switch (json.type) {
                 case 'version':
                     append = `VERSION - ${json.value.id}`
+                    playSound = true
                     break
                 case 'bbcode':
                     append = `BBCode - <a href="${json.value.id}" target="_blank">${json.value.text}</a>`
@@ -113,6 +174,20 @@
                     isVerified = true
                     verifiedStatus.innerHTML = `Hi, ${translator.value}!`
                     verifiedStatus.style = 'color: green;'
+                    return
+                case 'articles':
+                    articles = []
+                    const rows = json.value.text.split(/\r?\n/).slice(1, -1)
+                    for (const row of rows) {
+                        // https://stackoverflow.com/questions/21105360/regex-find-comma-not-inside-quotes/21106122
+                        const cols = row.split(/(?!\B"[^"]*),(?![^"]*"\B)/)
+                        if (!categories.includes(cols[7])) {
+                            categories.push(cols[7])
+                        }
+                        articles.push(cols)
+                    }
+                    updateCategoriesView()
+                    updateArticlesView()
                     return
                 default:
                     append = `${json.type.toUpperCase()} - <a href="${json.value.id}" target="_blank">${json.value.text}</a>`
@@ -134,13 +209,88 @@
             read.disabled = false
         }
 
+        function requestBBCodeFor(link) {
+            url.value = link
+            request.onclick()
+        }
+
+        function updateCategoriesView() {
+            categoryCheckboxes.innerHTML = ''
+            for (const cat of categories.sort()) {
+                const checkbox = document.createElement('input')
+                checkbox.value = cat
+                checkbox.type = 'checkbox'
+                checkbox.checked = 'checked'
+                checkbox.onchange = updateArticlesView
+                categoryCheckboxes.appendChild(checkbox)
+                categoryCheckboxes.appendChild(document.createTextNode(`[${cat.toUpperCase()}] `))
+            }
+        }
+
+        function updateArticlesView() {
+            articlesTable.innerHTML = `<table id="articles"><tr><th>Time</th><th>Category</th><th>Origin</th><th>Translation</th><th>Status</th><th>Take</th></tr></table>`
+
+            const filteredCategories = []
+            for (const checkbox of categoryCheckboxes.childNodes) {
+                if (checkbox.checked) {
+                    filteredCategories.push(checkbox.value)
+                }
+            }
+
+            const filteredTranslated = [
+                ...showTranslatedArticle.checked ? [true] : [],
+                ...showUntranslatedArticle.checked ? [false] : []
+            ]
+
+            const filteredEmeralded = [
+                ...showEmeraldedArticle.checked ? [true] : [],
+                ...showUnemeraldedArticle.checked ? [false] : []
+            ]
+
+            for (const [time, title, link, trTitle, trLink, _, emeralded, category] of articles) {
+                const isEmeralded = emeralded === '1'
+                const isTranslated = trLink !== '-'
+
+                if (!(
+                    filteredCategories.includes(category) &&
+                    filteredEmeralded.includes(isEmeralded) &&
+                    filteredTranslated.includes(isTranslated))
+                ) {
+                    continue
+                }
+
+                const row = articlesTable.insertRow(-1)
+                const timeCell = row.insertCell(0)
+                const categoryCell = row.insertCell(1)
+                const originCell = row.insertCell(2)
+                const translationCell = row.insertCell(3)
+                const statusCell = row.insertCell(4)
+                const operationCell = row.insertCell(5)
+                timeCell.innerHTML = time
+                categoryCell.innerHTML = category.toUpperCase()
+                originCell.innerHTML = `<a href="${link}" target="_blank">${title}</a>`
+                translationCell.innerHTML = isTranslated ? `<a href="${trLink}" target="_blank">${trTitle}</a>` : 'N/A'
+                statusCell.innerHTML = `<img src="${isEmeralded ? 'https://user-images.githubusercontent.com/15277496/76684841-320b4a80-65dd-11ea-8206-e766bbbd3b7d.png' : 'https://user-images.githubusercontent.com/15277496/76684847-3c2d4900-65dd-11ea-8d91-c7be623cf3d2.png'}">`
+
+                let operationEmoji
+                if (isEmeralded) {
+                    operationEmoji = '🖤'
+                } else if (isTranslated) {
+                    operationEmoji = '💚'
+                } else {
+                    operationEmoji = '💝'
+                }
+                operationCell.innerHTML = `<button type="button" onclick="requestBBCodeFor('${link}')">${operationEmoji}</button>`
+            }
+        }
+
         webSocket.onerror = e => {
             console.error(e)
         }
 
         webSocket.onclose = () => {
             const speech = 'WebSocket closed.'
-            speechSynthesis.speak(new SpeechSynthesisUtterance(speech))
+            // speechSynthesis.speak(new SpeechSynthesisUtterance(speech))
             status.innerHTML = speech
             read.disabled = true
             request.disabled = true
