--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             transition: 0.3s;
             padding: 2px 16px;
             font-size: 20px;
+            margin: auto;
+            min-width: 512px;
+            max-width: 75%;
         }
 
         #root:hover {
@@ -32,9 +35,10 @@
             font-size: 0.8em;
             border-collapse: collapse;
             table-layout: fixed;
-            max-width: 80%;
-            max-height: 10em;
-            overflow: scroll;
+            width: 80%;
+            max-height: 30em;
+            overflow-y: scroll;
+            display: block;
         }
 
         #articles td,
@@ -60,6 +64,52 @@
             background-color: #b2b2b2;
             color: black;
         }
+
+        /* Progress circle */
+
+        .lds-facebook {
+            display: inline-block;
+            position: relative;
+            width: 80px;
+            height: 80px;
+        }
+
+        .lds-facebook div {
+            display: inline-block;
+            position: absolute;
+            left: 8px;
+            width: 16px;
+            background: black;
+            animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+        }
+
+        .lds-facebook div:nth-child(1) {
+            left: 8px;
+            animation-delay: -0.24s;
+        }
+
+        .lds-facebook div:nth-child(2) {
+            left: 32px;
+            animation-delay: -0.12s;
+        }
+
+        .lds-facebook div:nth-child(3) {
+            left: 56px;
+            animation-delay: 0;
+        }
+
+        @keyframes lds-facebook {
+            0% {
+                top: 8px;
+                height: 64px;
+            }
+
+            50%,
+            100% {
+                top: 24px;
+                height: 32px;
+            }
+        }
     </style>
 </head>
 
@@ -69,10 +119,13 @@
         <input type="text" placeholder="Translator" id="translator" /><br />
         <input type="button" value="Request" id="request" />
         <div id="output"></div>
-        <p id="status">Connecting...</p>
-        <p id="verifiedStatus" style="color:darkgray">You are using a trial account.</p>
-        <input type="button" value="Clear" id="read" disabled />
-        <p>
+        <input type="button" value="Clear" id="read" style="display: none;" /><br>
+        <div class="lds-facebook" id="progressBar">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div id="filters" style="display: none;">
             <div id="categoryCheckboxes"></div>
             <div>
                 <input type="checkbox" onchange="updateArticlesView();" id="showTranslatedArticle" checked>Translated
@@ -83,8 +136,8 @@
                 <input type="checkbox" onchange="updateArticlesView();" id="showEmeraldedArticle">Emeralded
                 <input type="checkbox" onchange="updateArticlesView();" id="showUnemeraldedArticle" checked>Unemeralded
             </div>
-        </p>
-        <table id="articles"></table>
+            <table id="articles"></table>
+        </div>
     </div>
     <p style="text-align: center;"><a href="https://github.com/SPGoding/spx/blob/master/README.md">ABOUT US</a> &
         <a href="https://github.com/SPGoding/spx/blob/master/PRIVACY_POLICY.md">PRIVACY POLICY</a></p>
@@ -97,13 +150,14 @@
         const url = document.getElementById('url')
         const translator = document.getElementById('translator')
         const status = document.getElementById('status')
-        const verifiedStatus = document.getElementById('verifiedStatus')
         const articlesTable = document.getElementById('articles')
         const categoryCheckboxes = document.getElementById('categoryCheckboxes')
         const showTranslatedArticle = document.getElementById('showTranslatedArticle')
         const showUntranslatedArticle = document.getElementById('showUntranslatedArticle')
         const showEmeraldedArticle = document.getElementById('showEmeraldedArticle')
         const showUnemeraldedArticle = document.getElementById('showUnemeraldedArticle')
+        const progressBar = document.getElementById('progressBar')
+        const filters = document.getElementById('filters')
         const wsURL = 'wss://%replace_as_ws_url%'
         const webSocket = new WebSocket(wsURL)
         let isVerified = false
@@ -119,6 +173,7 @@
         if (localStorage.getItem('translator')) {
             translator.value = localStorage.getItem('translator')
         }
+        getArticles()
 
         request.onclick = () => {
             if (url.value) {
@@ -147,11 +202,7 @@
 
         read.onclick = () => {
             output.innerHTML = ''
-            read.disabled = true
-        }
-
-        webSocket.onopen = () => {
-            status.innerHTML = 'WebSocket opened.'
+            read.style.display = 'none'
         }
 
         webSocket.onmessage = event => {
@@ -168,26 +219,12 @@
                     break
                 case 'read':
                     output.innerHTML = ""
-                    read.disabled = true
+                    read.style.display = 'none'
                     return
                 case 'verify':
                     isVerified = true
-                    verifiedStatus.innerHTML = `Hi, ${translator.value}!`
-                    verifiedStatus.style = 'color: green;'
-                    return
-                case 'articles':
-                    articles = []
-                    const rows = json.value.text.split(/\r?\n/).slice(1, -1)
-                    for (const row of rows) {
-                        // https://stackoverflow.com/questions/21105360/regex-find-comma-not-inside-quotes/21106122
-                        const cols = row.split(/(?!\B"[^"]*),(?![^"]*"\B)/)
-                        if (!categories.includes(cols[7])) {
-                            categories.push(cols[7])
-                        }
-                        articles.push(cols)
-                    }
-                    updateCategoriesView()
-                    updateArticlesView()
+                    translator.style.color = 'green'
+                    translator.style.fontWeight = 'bold'
                     return
                 default:
                     append = `${json.type.toUpperCase()} - <a href="${json.value.id}" target="_blank">${json.value.text}</a>`
@@ -206,7 +243,33 @@
                     }">Copy BBCode</button>`
             }
             output.innerHTML = `${append}<br />${output.innerHTML}`
-            read.disabled = false
+            read.style.display = ''
+        }
+
+        function getArticles() {
+            const xhr = new XMLHttpRequest()
+            xhr.open('GET', 'https://raw.githubusercontent.com/RicoloveFeng/minecraft.net-translations/master/rawtable.csv', true)
+            xhr.onreadystatechange = () => {
+                if (xhr.readyState === 4) {
+                    if (xhr.status === 200) {
+                        articles = []
+                        const rows = xhr.responseText.split(/\r?\n/).slice(1, -1)
+                        for (const row of rows) {
+                            // https://stackoverflow.com/questions/21105360/regex-find-comma-not-inside-quotes/21106122
+                            const cols = row.split(/(?!\B"[^"]*),(?![^"]*"\B)/)
+                            if (!categories.includes(cols[7])) {
+                                categories.push(cols[7])
+                            }
+                            articles.push(cols)
+                        }
+                        updateCategoriesView()
+                        updateArticlesView()
+                    } else {
+                        alert('Error! ' + xhr.status)
+                    }
+                }
+            }
+            xhr.send()
         }
 
         function requestBBCodeFor(link) {
@@ -228,60 +291,66 @@
         }
 
         function updateArticlesView() {
-            articlesTable.innerHTML = `<table id="articles"><tr><th>Time</th><th>Category</th><th>Origin</th><th>Translation</th><th>Status</th><th>Take</th></tr></table>`
+            progressBar.style.display = ''
+            filters.style.display = 'none'
 
-            const filteredCategories = []
-            for (const checkbox of categoryCheckboxes.childNodes) {
-                if (checkbox.checked) {
-                    filteredCategories.push(checkbox.value)
-                }
-            }
+            setTimeout(() => {
+                let innerHTML = '<table id="articles"><tr><th>Time</th><th>Category</th><th>Origin</th><th>Translation</th><th>Status</th><th>Take</th></tr>'
 
-            const filteredTranslated = [
-                ...showTranslatedArticle.checked ? [true] : [],
-                ...showUntranslatedArticle.checked ? [false] : []
-            ]
-
-            const filteredEmeralded = [
-                ...showEmeraldedArticle.checked ? [true] : [],
-                ...showUnemeraldedArticle.checked ? [false] : []
-            ]
-
-            for (const [time, title, link, trTitle, trLink, _, emeralded, category] of articles) {
-                const isEmeralded = emeralded === '1'
-                const isTranslated = trLink !== '-'
-
-                if (!(
-                    filteredCategories.includes(category) &&
-                    filteredEmeralded.includes(isEmeralded) &&
-                    filteredTranslated.includes(isTranslated))
-                ) {
-                    continue
+                const filteredCategories = []
+                for (const checkbox of categoryCheckboxes.childNodes) {
+                    if (checkbox.checked) {
+                        filteredCategories.push(checkbox.value)
+                    }
                 }
 
-                const row = articlesTable.insertRow(-1)
-                const timeCell = row.insertCell(0)
-                const categoryCell = row.insertCell(1)
-                const originCell = row.insertCell(2)
-                const translationCell = row.insertCell(3)
-                const statusCell = row.insertCell(4)
-                const operationCell = row.insertCell(5)
-                timeCell.innerHTML = time
-                categoryCell.innerHTML = category.toUpperCase()
-                originCell.innerHTML = `<a href="${link}" target="_blank">${title}</a>`
-                translationCell.innerHTML = isTranslated ? `<a href="${trLink}" target="_blank">${trTitle}</a>` : 'N/A'
-                statusCell.innerHTML = `<img src="${isEmeralded ? 'https://user-images.githubusercontent.com/15277496/76684841-320b4a80-65dd-11ea-8206-e766bbbd3b7d.png' : 'https://user-images.githubusercontent.com/15277496/76684847-3c2d4900-65dd-11ea-8d91-c7be623cf3d2.png'}">`
+                const filteredTranslated = [
+                    ...showTranslatedArticle.checked ? [true] : [],
+                    ...showUntranslatedArticle.checked ? [false] : []
+                ]
 
-                let operationEmoji
-                if (isEmeralded) {
-                    operationEmoji = '🖤'
-                } else if (isTranslated) {
-                    operationEmoji = '💚'
-                } else {
-                    operationEmoji = '💝'
+                const filteredEmeralded = [
+                    ...showEmeraldedArticle.checked ? [true] : [],
+                    ...showUnemeraldedArticle.checked ? [false] : []
+                ]
+
+                for (const [time, title, link, trTitle, trLink, _, emeralded, category] of articles) {
+                    const isEmeralded = emeralded === '1'
+                    const isTranslated = trLink !== '-'
+
+                    if (!(
+                        filteredCategories.includes(category) &&
+                        filteredEmeralded.includes(isEmeralded) &&
+                        filteredTranslated.includes(isTranslated))
+                    ) {
+                        continue
+                    }
+
+                    let operationEmoji
+                    if (isEmeralded) {
+                        operationEmoji = '🖤'
+                    } else if (isTranslated) {
+                        operationEmoji = '💚'
+                    } else {
+                        operationEmoji = '💝'
+                    }
+
+                    innerHTML += '<tr>'
+                    innerHTML += `<td>${time}</td>`
+                    innerHTML += `<td>${category.toUpperCase()}</td>`
+                    innerHTML += `<td><a href="${link}" target="_blank">${title}</a></td>`
+                    innerHTML += `<td>${isTranslated ? `<a href="${trLink}" target="_blank">${trTitle}</a>` : 'N/A'}</td>`
+                    innerHTML += `<td><img src="${isEmeralded ? 'https://user-images.githubusercontent.com/15277496/76684841-320b4a80-65dd-11ea-8206-e766bbbd3b7d.png' : 'https://user-images.githubusercontent.com/15277496/76684847-3c2d4900-65dd-11ea-8d91-c7be623cf3d2.png'}"></td>`
+                    innerHTML += `<td><button type="button" onclick="requestBBCodeFor('${link}')">${operationEmoji}</button></td>`
+                    innerHTML += '</tr>'
                 }
-                operationCell.innerHTML = `<button type="button" onclick="requestBBCodeFor('${link}')">${operationEmoji}</button>`
-            }
+
+                innerHTML += '</table>'
+
+                articlesTable.innerHTML = innerHTML
+                progressBar.style.display = 'none'
+                filters.style.display = ''
+            }, 0)
         }
 
         webSocket.onerror = e => {
@@ -289,10 +358,7 @@
         }
 
         webSocket.onclose = () => {
-            const speech = 'WebSocket closed.'
-            // speechSynthesis.speak(new SpeechSynthesisUtterance(speech))
-            status.innerHTML = speech
-            read.disabled = true
+            read.style.display = 'none'
             request.disabled = true
             url.disabled = true
         }
